0.4.8 (11/12/2008)

  Backwards Incompatibilities

  - ``repoze.bfg.traversal.model_url`` now always appends a slash to
    all generated URLs unless further elements are passed in as the
    third and following arguments.  Rationale: views often use
    ``model_url`` without the third-and-following arguments in order
    to generate a URL for a model in order to point at the default
    view of a model.  The URL that points to the default view of the
    *root* model is technically ``http://mysite/`` as opposed to
    ``http://mysite`` (browsers happen to ask for '/' implicitly in
    the GET request).  Because URLs are never automatically generated
    for anything *except* models by ``model_url``, and because the
    root model is not really special, we continue this pattern.  The
    impact of this change is minimal (at most you will have too many
    slashes in your URL, which BFG deals with gracefully anyway).

0.4.7 (11/11/2008)

  Features

  - Allow ``testing.registerEventListener`` to be used with Zope 3
    style "object events" (subscribers accept more than a single event
    argument).  We extend the list with the arguments, rather than
    append.

0.4.6 (11/10/2008)

  Bug Fixes

  - The ``model_path`` and ``model_url`` traversal APIs returned the
    wrong value for the root object (e.g. ``model_path`` returned
    ``''`` for the root object, while it should have been returning
    ``'/'``).

0.4.5 (11/9/2008)

  Features

  - Added a ``clone`` method and a ``__contains__`` method to the
    DummyModel testing object.

  - Allow DummyModel objects to receive extra keyword arguments, which
    will be attached as attributes.

  - The DummyTemplateRenderer now returns ``self`` as its implementation.

0.4.4 (11/8/2008)

  Features

  - Added a ``repoze.bfg.testing`` module to attempt to make it
    slightly easier to write unittest-based automated tests of BFG
    applications.  Information about this module is in the
    documentation.
