@@ -1,3 +1,8 @@
+Next release
+
+  - Change paster template ``tests.py`` to include a true unit test.
+    Retain old test as an integration test.  Update documentation.
+
 0.4.8 (11/12/2008)
 
   Backwards Incompatibilities
